2010-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-treat-non-ascii): Make it work for XEmacs (at
	least 21.5).

	* smime.el (from): Declare it again for XEmacs.

2010-11-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-resend): Don't disable encoding unless it's
	already encoded.

	* nnimap.el (nnimap-update-info): Fix problem with `g' chopping of
	low-numbered articles.

2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-syntax-table): Simplify.

	* gnus-art.el (article-treat-non-ascii): Use put-char-table instead of
	set-char-table-range for XEmacs.

2010-11-10  Glenn Morris  <rgm@gnu.org>

	* smime.el (from): Remove unused declaration.

	* gnus-util.el (with-no-warnings): Remove compat stub, now unused.
	(gnus-float-time): On Emacs, always an alias.

	* ecomplete.el (with-no-warnings): Remove compat stub, now unused.
	(ecomplete-add-item): Use float-time on Emacs, else gnus-float-time.

2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (org-entities): Declare it to silence the byte compiler.

2010-11-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (browse-url-mailto): Autoload.

	* gnus-art.el (article-treat-non-ascii): New command and keystroke.

	* message.el (message-subject-trailing-was-ask-regexp): A ] in a []
	regexp doesn't need quoting.

2010-11-09  Sven Joachim  <svenjoac@gmx.de>

	* message.el (message-subject-trailing-was-ask-regexp)
	(message-subject-trailing-was-regexp): Match was: in addition to was.

2010-11-09  Glenn Morris  <rgm@gnu.org>

	* nnbabyl.el (nnbabyl-request-move-article, nnbabyl-delete-mail)
	(nnbabyl-check-mbox): Use point-at-bol.

2010-11-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-browse-url): Call browse-url-mailto for mailto: links.

	* message.el (message-mailto): New function.
	(message-mailto): Should accept other parameters.
	(message-mailto): Remove since it duplicates browse-url-mailto
	functionality.
