@@ -1,3 +1,13 @@
+2010-11-11  Andrew Cohen  <cohen@andy.bu.edu>
+
+	* nnir.el (nnir-request-move-article): fix to provide original group
+	and subject.
+	(nnir-warp-to-article): don't fail on articles whose headers haven't
+	been retrieved.
+
+	* gnus-sum.el (gnus-summary-move-article): use original group and
+	subject for virtual articles such as those in an nnir summary buffer.
+
 2010-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (article-treat-non-ascii): Make it work for XEmacs (at
